@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 70bd89516f5a2aaaf6b8c705bf8cf97e16c9c3c2 ChangeLog
+SHA1 e534d02e4d9c4c57f7a301e6eee037b7c54a06b5 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
 SHA1 9052b97ffecf7534264feb52484cbb9c712620a4 META.yml
 SHA1 3652d2d65bed7aa5d16cd09f45807e2ae8c250dc MYMETA.json
 SHA1 b38b7cc897cb4fab052219fd53890d1940c60aca MYMETA.yml
-SHA1 229ea10590a18f93201779eaa95ee3e1903ddb29 Makefile.PL
+SHA1 814fa625a5044519b6fef4a7f4208b0ed5844bb8 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 26ab05febbdab79359953d086b447397c1719b5c bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 bb9ecdda044e48229ab4c95b39985149cd9e353f lib/Net/FullAuto.pm
+SHA1 68d1b0b41ad7fa02a23cad6571aed0403cdb4398 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,17 +50,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 2207808d0b93f4260294fe711796765af20a612b lib/Net/FullAuto/FA_Core.pm
+SHA1 e49acfa545a4d13530be28c64b6c892e57284d43 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJR9JJYAAoJEBa/9Pad787EK+MIAI370OJ425y4oQ5dEGaxwPlx
-ll2Gcg31y3Fw0xsPKsF1jybtJynNmcP3urqEZoQ4JYupUPBQqVGsQR4IzBRIDFXW
-0bfG7WHGhtoCpgS5tlnlZYDnlq3OOopvE8QRR/NLocxrcJa2TE+LZrlmIrH5f5Ug
-erhZVC92tzAxYrL854SdDvewt/ks8hNsyd+162jaCieRcqZE1e7xxv2pQ2Q95jI0
-5w1owmute5v03riDzVzpHmnsf9fIfVzs/G+3QL9/K7zS8pG5ae3dgoakWGGJ/Mmq
-BGntNsTzwpXNSO5IorthC6JObY4iYhcL+4V/IQYO5BInvgTfgoQ3uReHxWKk93w=
-=buht
+iQEcBAEBAgAGBQJR9dl4AAoJEBa/9Pad787E4YkIAJi5VzBeiCKYPGzUoYg2Uvz2
+x+Y83X7360RRys+Y3sbQqAt8UDDCT/m24LEunlrcC8nK5dnOh3kolyTZv/cDoP5x
+rkK2nRamXYojsX8NoirYLpa79dIeDNRs1ur6OwwU05dM0SlWVKhGwE8umq2NRY8c
+l2MBJ8UUOXDwherElj+iRRAFa8P8drNKEhXQ/v3D2WrP2fy4N9I7EQOjhQLuZXzs
+HvlVcALJfdGOatUT/ghEfA7CKifkzf+aNQvzSa3ya9uCC/WbZYO0mfGKtj3pVBVJ
+7EKdP2hAV0v2bsNmIjPWP2yGUfpPrm98r2ECQDnOTucXZFKlwLeK8WEoOEZYzqo=
+=EIPL
 -----END PGP SIGNATURE-----
